# Evolutionary-Computations

./: .gitignore  README.md  main.py  pyproject.toml  sprawozdanie.md  sprawozdanie_p2.md  sprawozdanie_p3.md  sprawozdanie_p4.md
results/hypersphere_20260414_225841_644036/: history.csv  summary.json
results/hypersphere_20260414_225852_305808/: history.csv  summary.json
results/hypersphere_20260414_225900_079200/: history.csv  summary.json
src/: main.py  run_mealpy_experiments.py  run_pygad_experiments.py
src/algorithms/: __init__.py  genetic_algorithm.py  mealpy_algorithm.py  pygad_algorithm.py
src/functions/: approximate_func.py  builtin_functions.py
src/gui/: main_window.py
src/gui/widgets/: __init__.py  function_list.py  ga_widget.py  output_display.py  parameter_form.py
src/registry/: __init__.py  function_registry.py  parameter_info.py
src/reporting/: __init__.py  mealpy_result_files.py  pygad_result_files.py  result_files.py
