[project]
name = "evolutionary-computations"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ruff>=0.15.2",
    "PyQt6>=6.5.0",
    "PyQt6-sip>=13.6.0",
    "benchmark-functions>=1.1.4",
    "numpy>=2.0.0",
    "pygad>=3.3.1",
    "scipy>=1.17.1",
]
